--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.0",
+    "mongoose": "6.7.5",
     "multer": "^1.4.5-lts.1",
     "xlsx": "^0.18.5"
   },
